--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "Matias Mamani",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.7"
+    "mongoose": "^5.7.7",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
